examples/test/testpolicy8291.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8291
  namespace: namespace323
spec:
  podSelector:
    matchLabels:
      key15: value3
      key19: value42
      key0: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value3
      podSelector:
        matchLabels:
          key43: value48
          key5: value19
          key36: value28
